# swutils

./: .gitignore  LICENSE  README.md
CMakeModules/: create_targets.cmake  googletest_build.cmake  print_properties.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt  TempFile.cpp  TempFile.hpp
src/common/unitTest/: TempFile_test.cpp
